# APWikiDesktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Publish/: README.txt
scripts/: publish.mjs  sync-abya-tiles.mjs
src/: App.tsx  api.ts  defaultTemplates.ts  groups.ts  i18n.ts  localization.ts  markdown.ts  options.ts  richImage.ts  richImageMarkdown.ts  styles.css  tileSize.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
