[package]
name = "ap-wiki-desktop"
version = "0.1.0"
description = "AP Wiki desktop prototype"
authors = ["AP Wiki"]
edition = "2021"

[lib]
name = "ap_wiki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
